@@ -22,6 +22,8 @@ PHP                                                                        NEWS
 - Remove output buffering for error messages sent through stderr on
   Windows. (Pierre)
 
+- Fixed bug #50859 (build fails with openssl 1.0 due to md2 deprecation).   
+  (Ilia, hanno at hboeck dot de)
 - Fixed bug #50829 (php.ini directive pdo_mysql.default_socket is ignored).
   (Ilia)
 - Fixed bug #50832 (HTTP fopen wrapper does not support passwordless HTTP
